Extend CSS to other pages

--- a/la-mia-musica.html
+++ b/la-mia-musica.html
@@ -38,7 +38,7 @@
 <link rel="preconnect" href="https://gfonts.jwwb.nl">
 <link rel="stylesheet" type="text/css" href="https://assets.jwwb.nl/assets/website-rendering/styles.f78188d346eb1faf64a5.css?bust=7a6e6f2cb6becdc09bb5" nonce="b93d6ab0d4279d9c81b358916b36d072" data-turbo-track="dynamic">
 <link rel="preconnect" href="https://assets.jwwb.nl">
-<link rel="stylesheet" type="text/css" href="../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/style.css@bust=1764437468.css" nonce="b93d6ab0d4279d9c81b358916b36d072" data-turbo-track="dynamic">    </head>
+<link rel="stylesheet" type="text/css" href="css/style.css" nonce="cc5141fd48613d92c70500f875109064" data-turbo-track="dynamic">    </head>
     <body
         id="top"
         class="jw-is-no-slideshow jw-header-is-text jw-is-segment-page jw-is-frontend jw-is-no-sidebar jw-is-no-messagebar jw-is-no-touch-device jw-is-no-mobile"
