Hide/adjust content

--- a/contatti.html
+++ b/contatti.html
@@ -498,7 +498,7 @@
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
     <small>
-        Fornito da <a href="https://www.webador.it" rel="nofollow">Webador</a>    </small>
+        Generato in <a href="https://www.webador.it" rel="nofollow">Webador</a>    </small>
 </div>
                     </div>
                 </div>
