Simplify and remove excess images

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic"
             style="padding-top: 75%;"
         >
-                                            <img class="jw-element-image__image jw-intrinsic__item" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5;" alt="" src="image/photo_5854714588744584271_y-high.jpg@width=800.jpg" sizes="auto, min(100vw, 1200px), 100vw" loading="lazy" width="800" height="600">                    </picture>
+                                            <img class="jw-element-image__image jw-intrinsic__item" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5;" alt="" src="image/photo_5854714588744584271_y-high.jpg" sizes="auto, min(100vw, 1200px), 100vw" loading="lazy" width="800" height="600">                    </picture>
 
             </div>
 </div></div></div></div></div></div><div
