--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
     data-jw-element-id="601732942"
         class="jw-tree-node jw-element jw-strip jw-tree-container jw-strip--default jw-strip--style-split-image jw-strip--color-default jw-strip--split-image-position-left jw-strip--padding-both"
 >
-    <div class="jw-strip__image-container"><img src="../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/santa-sofia-standard.png" width="671" height="412" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
+    <div class="jw-strip__image-container"><img src="image/santa-sofia-standard.jpg" width="671" height="412" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
     id="jw-element-601732943"
     data-jw-element-id="601732943"
         class="jw-tree-node jw-element jw-spacer jw-node-is-first-child"
