Remove fake comments, again

--- a/index.html
+++ b/index.html
@@ -801,153 +801,9 @@
                                             <img class="jw-element-image__image jw-intrinsic__item" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5;" alt="" src="image/voce-2-high.jpg" sizes="auto, min(100vw, 1200px), 100vw" loading="lazy" width="800" height="320">                    </picture>
 
             </div>
-</div></div></div></div><div
-    id="jw-element-601732957"
-    data-jw-element-id="601732957"
-        class="jw-tree-node jw-element jw-strip jw-tree-container jw-strip--default jw-strip--style-color jw-strip--color-shaded jw-strip--padding-both"
->
-    <div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
-    id="jw-element-601732958"
-    data-jw-element-id="601732958"
-        class="jw-tree-node jw-element jw-columns jw-tree-container jw-tree-horizontal jw-columns--mode-flex jw-node-is-first-child jw-node-is-last-child"
->
-    <div
-    id="jw-element-601732959"
-    data-jw-element-id="601732959"
-            style="width: 33.333333333333%"
-        class="jw-tree-node jw-element jw-column jw-tree-container jw-node-is-first-child jw-responsive lt400 lt480 lt540 lt600 lt640 lt800"
->
-    <div
-    id="jw-element-601732960"
-    data-jw-element-id="601732960"
-        class="jw-tree-node jw-element jw-box jw-tree-container jw-box--color-default jw-node-is-first-child jw-node-is-last-child"
->
-    <div
-    id="jw-element-601732961"
-    data-jw-element-id="601732961"
-        class="jw-tree-node jw-element jw-image jw-node-is-first-child"
->
-    <div
-    class="jw-intent jw-element-image jw-element-content jw-element-image-is-center jw-element-image-is-icon"
-            style="width: 60px;"
-    >
-            
-        
-                <picture
-            class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic"
-            style="padding-top: 100%;"
-        >
-                            <div class="jw-element-image__image jw-intrinsic__item jw-icon-image">
-                    <div
-                        class="jw-icon-image__inner"
-                        style="--jw-element-image--icon-image: url('https://assets.jwwb.nl/assets/img/icons/right-quotation-mark.svg');"
-                    ></div>
-                </div>
-                    </picture>
+</div></div></div></div>
 
-            </div>
-</div>
-
-<div
-    id="jw-element-601732974"
-    data-jw-element-id="601732974"
-        class="jw-tree-node jw-element jw-strip jw-tree-container jw-strip--default jw-strip--style-color jw-strip--color-default jw-strip--padding-both jw-node-is-last-child"
->
-    <div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
-    id="jw-element-601732975"
-    data-jw-element-id="601732975"
-        class="jw-tree-node jw-element jw-image-text jw-node-is-first-child"
->
-    <div class="jw-element-imagetext-text">
-            <h2 class="jw-heading-100">Contattami</h2>    </div>
-</div><div
-    id="jw-element-601732976"
-    data-jw-element-id="601732976"
-        class="jw-tree-node jw-element jw-columns jw-tree-container jw-tree-horizontal jw-columns--mode-flex jw-node-is-last-child"
->
-    <div
-    id="jw-element-601732977"
-    data-jw-element-id="601732977"
-            style="width: 45%"
-        class="jw-tree-node jw-element jw-column jw-tree-container jw-node-is-first-child jw-responsive lt480 lt540 lt600 lt640 lt800"
->
-    <div
-    id="jw-element-601732978"
-    data-jw-element-id="601732978"
-        class="jw-tree-node jw-element jw-contact-form jw-node-is-first-child jw-node-is-last-child"
->
-                <form method="POST" class="jw-form-container">                                    
-                <div class="jw-element-form-group"><label for="jwFormJzz8DZ_dynamic-form-5249579-17766979" class="jw-element-form-label">Nome *</label><div class="jw-element-form-content"><input type="text" name="dynamic-form-5249579-17766979" required="required" id="jwFormJzz8DZ_dynamic-form-5249579-17766979" class="form-control&#x20;jw-element-form-input-text" value=""></div></div>                                                
-                <div class="jw-element-form-group"><label for="jwFormnZtJRb_dynamic-form-5249579-17766980" class="jw-element-form-label">Indirizzo email *</label><div class="jw-element-form-content"><input type="email" name="dynamic-form-5249579-17766980" required="required" id="jwFormnZtJRb_dynamic-form-5249579-17766980" class="form-control&#x20;jw-element-form-input-text" value=""></div></div>                                                
-                <div class="jw-element-form-group"><label for="jwFormT1YYwU_dynamic-form-5249579-17766981" class="jw-element-form-label">Messaggio *</label><div class="jw-element-form-content"><textarea name="dynamic-form-5249579-17766981" required="required" id="jwFormT1YYwU_dynamic-form-5249579-17766981" class="form-control&#x20;jw-element-form-input-text"></textarea></div></div>                                    <div class="hidden"><label for="jwForm7Xo35E_captcha" class="jw-element-form-label">Lascia questo campo vuoto</label><div class="jw-element-form-content"><input type="text" name="captcha" id="jwForm7Xo35E_captcha" class="form-control&#x20;jw-element-form-input-text" value=""></div></div>        <input type="hidden" name="csrf_5249579" id="jwFormCdJPhg_csrf_5249579" value="82go1l9PK3PFTfPB">                                        <input type="hidden" name="captcha-response" data-sitekey="6Lf2k5ApAAAAAHnwq8755XMiirIOTY2Cw_UdHdfa" data-action="CONTACT" id="jwFormvAKKKX_captcha-response" value="">        <div
-            class="jw-element-form-group captcha-form-group hidden"
-            data-jw-controller="website--form--lazy-captcha-group"        >
-            <div class="jw-element-form-content">
-                <div class="captcha-widget" data-jw-controller="common--form--captcha-checkbox" data-common--form--captcha-checkbox-action-value="CONTACT" data-common--form--captcha-checkbox-sitekey-value="6Lf2k5ApAAAAAHnwq8755XMiirIOTY2Cw_UdHdfa"></div>                            </div>
-        </div>
-            <div class="jw-element-form-group">
-                                        <div class="jw-element-form-content">
-                    <button
-                        type="submit"
-                        class="jw-btn jw-btn--size-small"
-                        name="submit"
-                    >
-                        <div class="jw-btn-caption">Invia modulo</div>
-                    </button>
-                </div>
-                    </div>
-    </form></div></div><div
-    id="jw-element-601732979"
-    data-jw-element-id="601732979"
-            style="width: 5%"
-        class="jw-tree-node jw-element jw-column jw-tree-container jw-tree-container--empty jw-responsive lt200 lt300 lt400 lt480 lt540 lt600 lt640 lt800"
->
-    </div><div
-    id="jw-element-601732980"
-    data-jw-element-id="601732980"
-            style="width: 50%"
-        class="jw-tree-node jw-element jw-column jw-tree-container jw-node-is-last-child jw-responsive lt480 lt540 lt600 lt640 lt800"
->
-    <div
-    id="jw-element-601732981"
-    data-jw-element-id="601732981"
-        class="jw-tree-node jw-element jw-map jw-node-is-first-child"
->
-        <div class="jw-map-wrapper jw-map--marker-accent">
-        <div
-            id="jw-map-601732981"
-            class="jw-map-div"
-            style="min-height: 300px;"
-            data-lat="41.890503277412"
-            data-lng="12.491125937003"
-            data-zoom="6"
-            data-controls="1"
-            data-location=""
-            data-location-lat=""
-            data-location-lng=""
-            data-theme="normal"
-        ></div>
-            </div>
-</div><div
-    id="jw-element-601732982"
-    data-jw-element-id="601732982"
-        class="jw-tree-node jw-element jw-image-text"
->
-    <div class="jw-element-imagetext-text">
-            <h3 class="jw-heading-70">Indirizzo</h3>    </div>
-</div><div
-    id="jw-element-601732983"
-    data-jw-element-id="601732983"
-        class="jw-tree-node jw-element jw-image-text"
->
-    <div class="jw-element-imagetext-text">
-            <p>Roma<br />Italia</p>    </div>
-</div><div
-    id="jw-element-601732984"
-    data-jw-element-id="601732984"
-        class="jw-tree-node jw-element jw-social-follow jw-node-is-last-child"
->
-    </div></div></div></div></div></div></div>            </div>
+    </div></div>
 </main>
     </div>
 <footer class="block-footer">
