Fix chi-sono and la-mia-musica

--- a/chi-sono.html
+++ b/chi-sono.html
@@ -358,7 +358,7 @@
             class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic"
             style="padding-top: 73.3002%;"
         >
-                                            <img class="jw-element-image__image jw-intrinsic__item" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5;" alt="" src="index/syndrome-high.jpg" sizes="auto, min(100vw, 1200px), 100vw" loading="lazy" width="800" height="586.40167364017">                    </picture>
+                                            <img class="jw-element-image__image jw-intrinsic__item" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5;" alt="" src="image/syndrome-high.jpg" sizes="auto, min(100vw, 1200px), 100vw" loading="lazy" width="800" height="586.40167364017">                    </picture>
 
             </div>
 </div></div><div
