--- a/la-mia-musica.html
+++ b/la-mia-musica.html
@@ -23,7 +23,6 @@
                     <meta name="robots" content="noindex,nofollow">
                 <title>La mia musica | SyN Silvia Nardoni</title>
                                             <link href="https://assets.jwwb.nl/assets/brand/webador/icon/favicon.png?bust=2299e1307cbb69076146" rel="shortcut icon">                                                <link href="https://assets.jwwb.nl/assets/brand/webador/icon/favicon.png?bust=2299e1307cbb69076146" rel="icon">                                        <meta property="og:image" content="https&#x3A;&#x2F;&#x2F;primary.jwwb.nl&#x2F;pexels&#x2F;23&#x2F;2332611.jpeg&#x3F;enable-io&#x3D;true&amp;enable&#x3D;upscale&amp;fit&#x3D;bounds&amp;width&#x3D;1200">
-                    <meta property="og:image" content="https&#x3A;&#x2F;&#x2F;primary.jwwb.nl&#x2F;public&#x2F;i&#x2F;x&#x2F;u&#x2F;temp-ujwhzqburyfyeblkiadv&#x2F;label-free-high.jpg">
                     <meta property="og:image" content="https&#x3A;&#x2F;&#x2F;primary.jwwb.nl&#x2F;pexels&#x2F;23&#x2F;2332611.jpeg&#x3F;enable-io&#x3D;true&amp;enable&#x3D;upscale&amp;fit&#x3D;bounds&amp;width&#x3D;1200">
                                     <meta name="twitter:card" content="summary_large_image">
                         <meta property="twitter:image" content="https&#x3A;&#x2F;&#x2F;primary.jwwb.nl&#x2F;pexels&#x2F;23&#x2F;2332611.jpeg&#x3F;enable-io&#x3D;true&amp;enable&#x3D;upscale&amp;fit&#x3D;bounds&amp;width&#x3D;1200">
@@ -280,7 +279,7 @@
     data-jw-element-id="601740276"
         class="jw-tree-node jw-element jw-strip jw-tree-container jw-strip--default jw-strip--style-split-image jw-strip--color-default jw-strip--split-image-position-left jw-strip--padding-both"
 >
-    <div class="jw-strip__image-container"><img src="../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/img-20240610-wa0035-standard-rzsyak.jpg" width="1600" height="680" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
+    <div class="jw-strip__image-container"><img src="image/img-20240610-wa0035-standard-rzsyak.jpg" width="1600" height="680" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
     id="jw-element-601740277"
     data-jw-element-id="601740277"
         class="jw-tree-node jw-element jw-spacer jw-node-is-first-child"
@@ -319,7 +318,7 @@
     data-jw-element-id="601740281"
         class="jw-tree-node jw-element jw-strip jw-tree-container jw-strip--default jw-strip--style-split-image jw-strip--color-default jw-strip--split-image-position-right jw-strip--padding-both"
 >
-    <div class="jw-strip__image-container"><img src="../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/img_20240703_101620_967-standard-13lxzt.jpg" width="1280" height="853" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
+    <div class="jw-strip__image-container"><img src="image/img_20240703_101620_967-standard-13lxzt.jpg" width="1280" height="853" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
     id="jw-element-601740282"
     data-jw-element-id="601740282"
         class="jw-tree-node jw-element jw-spacer jw-node-is-first-child"
@@ -358,7 +357,7 @@
     data-jw-element-id="601740286"
         class="jw-tree-node jw-element jw-strip jw-tree-container jw-strip--default jw-strip--style-split-image jw-strip--color-default jw-strip--split-image-position-left jw-strip--padding-both"
 >
-    <div class="jw-strip__image-container"><img src="../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/img-20240609-wa0042-standard.jpg" width="1600" height="1200" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
+    <div class="jw-strip__image-container"><img src="image/img-20240609-wa0042-standard.jpg" width="1600" height="1200" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
     id="jw-element-601740287"
     data-jw-element-id="601740287"
         class="jw-tree-node jw-element jw-spacer jw-node-is-first-child"
@@ -580,7 +579,7 @@
             class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic"
             style="padding-top: 66.6667%;"
         >
-                                            <img class="jw-element-image__image jw-intrinsic__item" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0;" alt="" src="../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/label-free-high.jpg@enable-io=true&amp;enable=upscale&amp;crop=1.5%253A1,offset-y0&amp;width=800" srcset="../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/label-free-high.jpg@enable-io=true&amp;crop=1.5%253A1,offset-y0&amp;width=96width=../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/label-free-high.jpg@enable-io=true&amp;crop=1.5%253A1,offset-y0&amp;width=147y0&amp;../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/label-free-high.jpg@enable-io=true&amp;crop=1.5%253A1,offset-y0&amp;width=226Coffset../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/label-free-high.jpg@enable-io=true&amp;crop=1.5%253A1,offset-y0&amp;width=347.5%3A1%../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/label-free-high.jpg@enable-io=true&amp;crop=1.5%253A1,offset-y0&amp;width=532p;crop=../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/label-free-high.jpg@enable-io=true&amp;crop=1.5%253A1,offset-y0&amp;width=816=true&a../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/label-free-high.jpg@enable-io=true&amp;crop=1.5%253A1,offset-y0&amp;width=1252able-io=../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/label-free-high.jpg@enable-io=true&amp;crop=1.5%253A1,offset-y0&amp;width=1920h.jpg?enable-io=true&amp;crop=1.5%3A1%2Coffset-y0&amp;width=1920 1920w" sizes="auto, min(100vw, 1200px), 100vw" loading="lazy" width="800" height="533.33333333334">                    </picture>
+                                            <img class="jw-element-image__image jw-intrinsic__item" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0;" alt="" src="image/label-free-high.jpg" sizes="auto, min(100vw, 1200px), 100vw" loading="lazy" width="800" height="533.33333333334">                    </picture>
 
             </div>
 </div></div></div></div></div></div><div
