Fix and add esperienze

--- a/esperienze.html
+++ b/esperienze.html
@@ -276,7 +276,7 @@
     data-jw-element-id="602482568"
         class="jw-tree-node jw-element jw-strip jw-tree-container jw-strip--default jw-strip--style-split-image jw-strip--color-default jw-strip--split-image-position-left jw-strip--padding-both"
 >
-    <div class="jw-strip__image-container"><img src="../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/esperienze-standard-bjpjzy.jpg" width="1920" height="1137" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
+    <div class="jw-strip__image-container"><img src="image/esperienze-standard-bjpjzy.jpg" width="1920" height="1137" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
     id="jw-element-602482569"
     data-jw-element-id="602482569"
         class="jw-tree-node jw-element jw-image-text jw-node-is-first-child"
@@ -311,7 +311,7 @@
     data-jw-element-id="602482572"
         class="jw-tree-node jw-element jw-strip jw-tree-container jw-strip--default jw-strip--style-split-image jw-strip--color-default jw-strip--split-image-position-left jw-strip--padding-both"
 >
-    <div class="jw-strip__image-container"><img src="../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/img_20230828_102739_531-standard.jpg" width="663" height="854" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
+    <div class="jw-strip__image-container"><img src="image/img_20230828_102739_531-standard.jpg" width="663" height="854" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
     id="jw-element-602482573"
     data-jw-element-id="602482573"
         class="jw-tree-node jw-element jw-image-text jw-node-is-first-child"
@@ -346,7 +346,7 @@
     data-jw-element-id="602482576"
         class="jw-tree-node jw-element jw-strip jw-tree-container jw-strip--default jw-strip--style-split-image jw-strip--color-default jw-strip--split-image-position-left jw-strip--padding-both"
 >
-    <div class="jw-strip__image-container"><img src="../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/img-20240807-wa0000-standard.jpg" width="1496" height="1496" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
+    <div class="jw-strip__image-container"><img src="image/img-20240807-wa0000-standard.jpg" width="1496" height="1496" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
     id="jw-element-602482577"
     data-jw-element-id="602482577"
         class="jw-tree-node jw-element jw-image-text jw-node-is-first-child"
