--- a/la-mia-musica.html
+++ b/la-mia-musica.html
@@ -515,7 +515,7 @@
             class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic"
             style="padding-top: 66.6667%;"
         >
-                                            <img class="jw-element-image__image jw-intrinsic__item" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5;" alt="" src="../primary.jwwb.nl/pexels/23/2332611.jpeg" srcset="../primary.jwwb.nl/pexels/23/2332611.jpeg@enable-io=true&amp;width=96h=96 9../primary.jwwb.nl/pexels/23/2332611.jpeg@enable-io=true&amp;width=147idth=14../primary.jwwb.nl/pexels/23/2332611.jpeg@enable-io=true&amp;width=226mp;widt../primary.jwwb.nl/pexels/23/2332611.jpeg@enable-io=true&amp;width=347ue&amp;../primary.jwwb.nl/pexels/23/2332611.jpeg@enable-io=true&amp;width=532o=true&../primary.jwwb.nl/pexels/23/2332611.jpeg@enable-io=true&amp;width=816le-io=t../primary.jwwb.nl/pexels/23/2332611.jpeg@enable-io=true&amp;width=1252nable-io../primary.jwwb.nl/pexels/23/2332611.jpeg@enable-io=true&amp;width=1920eg?enable-io=true&amp;width=1920 1920w" sizes="auto, min(100vw, 1200px), 100vw" loading="lazy" width="1920" height="1280">                    </picture>
+                                            <img class="jw-element-image__image jw-intrinsic__item" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5;" alt="" src="image/missing.jpg" sizes="auto, min(100vw, 1200px), 100vw" loading="lazy" width="1920" height="1280">                    </picture>
 
             </div>
 </div></div></div></div></div></div><div
@@ -643,7 +643,7 @@
             class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic"
             style="padding-top: 66.6667%;"
         >
-                                            <img class="jw-element-image__image jw-intrinsic__item" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5;" alt="" src="../primary.jwwb.nl/pexels/23/2332611.jpeg" srcset="../primary.jwwb.nl/pexels/23/2332611.jpeg@enable-io=true&amp;width=96h=96 9../primary.jwwb.nl/pexels/23/2332611.jpeg@enable-io=true&amp;width=147idth=14../primary.jwwb.nl/pexels/23/2332611.jpeg@enable-io=true&amp;width=226mp;widt../primary.jwwb.nl/pexels/23/2332611.jpeg@enable-io=true&amp;width=347ue&amp;../primary.jwwb.nl/pexels/23/2332611.jpeg@enable-io=true&amp;width=532o=true&../primary.jwwb.nl/pexels/23/2332611.jpeg@enable-io=true&amp;width=816le-io=t../primary.jwwb.nl/pexels/23/2332611.jpeg@enable-io=true&amp;width=1252nable-io../primary.jwwb.nl/pexels/23/2332611.jpeg@enable-io=true&amp;width=1920eg?enable-io=true&amp;width=1920 1920w" sizes="auto, min(100vw, 1200px), 100vw" loading="lazy" width="1920" height="1280">                    </picture>
+                                            <img class="jw-element-image__image jw-intrinsic__item" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5;" alt="" src="image/missing.jpg" sizes="auto, min(100vw, 1200px), 100vw" loading="lazy" width="1920" height="1280">                    </picture>
 
             </div>
 </div></div></div></div></div></div></div>            </div>
