Remove fake comment

--- a/esperienze.html
+++ b/esperienze.html
@@ -376,26 +376,8 @@
              </div>
         </a>
     </div>
-</div></div></div></div><div
-    id="jw-element-602482580"
-    data-jw-element-id="602482580"
-        class="jw-tree-node jw-element jw-strip jw-tree-container jw-strip--default jw-strip--style-color jw-strip--color-accent jw-strip--padding-both jw-node-is-last-child"
->
-    <div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
-    id="jw-element-602482581"
-    data-jw-element-id="602482581"
-        class="jw-tree-node jw-element jw-image-text jw-node-is-first-child"
->
-    <div class="jw-element-imagetext-text">
-            <h2 class="jw-heading-100" style="text-align: center;">"La sua passione e dedizione sono palpabili in ogni performance. Un'artista completa, con una voce potente e un'energia contagiosa."</h2>    </div>
-</div><div
-    id="jw-element-602482582"
-    data-jw-element-id="602482582"
-        class="jw-tree-node jw-element jw-image-text jw-node-is-last-child"
->
-    <div class="jw-element-imagetext-text">
-            <p style="text-align: center;">Marco Rossi, Produttore Musicale</p>    </div>
-</div></div></div></div></div>            </div>
+</div></div></div></div>
+</div></div>
 </main>
     </div>
 <footer class="block-footer">
