Add images to canto-estremo

--- a/canto-estremo.html
+++ b/canto-estremo.html
@@ -276,7 +276,7 @@
     data-jw-element-id="602485809"
         class="jw-tree-node jw-element jw-strip jw-tree-container jw-strip--default jw-strip--style-split-image jw-strip--color-default jw-strip--split-image-position-left jw-strip--padding-both"
 >
-    <div class="jw-strip__image-container"><img src="../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/img-20240327-wa0006-standard.jpg" width="1600" height="1141" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
+    <div class="jw-strip__image-container"><img src="image/img-20240327-wa0006-standard.jpg" width="1600" height="1141" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
     id="jw-element-602485810"
     data-jw-element-id="602485810"
         class="jw-tree-node jw-element jw-spacer jw-node-is-first-child"
@@ -315,7 +315,7 @@
     data-jw-element-id="602485814"
         class="jw-tree-node jw-element jw-strip jw-tree-container jw-strip--default jw-strip--style-split-image jw-strip--color-default jw-strip--split-image-position-right jw-strip--padding-both"
 >
-    <div class="jw-strip__image-container"><img src="../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/img-20240406-wa0068-standard.jpg" width="1153" height="2048" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
+    <div class="jw-strip__image-container"><img src="image/img-20240406-wa0068-standard.jpg" width="1153" height="2048" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
     id="jw-element-602485815"
     data-jw-element-id="602485815"
         class="jw-tree-node jw-element jw-spacer jw-node-is-first-child"
@@ -354,7 +354,7 @@
     data-jw-element-id="602485819"
         class="jw-tree-node jw-element jw-strip jw-tree-container jw-strip--default jw-strip--style-split-image jw-strip--color-default jw-strip--split-image-position-left jw-strip--padding-both jw-node-is-last-child"
 >
-    <div class="jw-strip__image-container"><img src="../primary.jwwb.nl/public/i/x/u/temp-ujwhzqburyfyeblkiadv/fb_img_1750427460526-standard.jpg" width="1365" height="2048" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
+    <div class="jw-strip__image-container"><img src="image/fb_img_1750427460526-standard.jpg" width="1365" height="2048" class="jw-strip__image" alt="" loading="lazy"></div><div class="jw-strip__content-container"><div class="jw-strip__content jw-responsive"><div
     id="jw-element-602485821"
     data-jw-element-id="602485821"
         class="jw-tree-node jw-element jw-spacer jw-node-is-first-child"
