Fix image for Into The Abyss

--- a/la-mia-musica.html
+++ b/la-mia-musica.html
@@ -515,7 +515,7 @@
             class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic"
             style="padding-top: 66.6667%;"
         >
-                                            <img class="jw-element-image__image jw-intrinsic__item" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5;" alt="" src="image/missing.jpg" sizes="auto, min(100vw, 1200px), 100vw" loading="lazy" width="1920" height="1280">                    </picture>
+                                            <img class="jw-element-image__image jw-intrinsic__item" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5;" alt="" src="image/img-20240327-wa0006-standard.jpg" sizes="auto, min(100vw, 1200px), 100vw" loading="lazy" width="1920" height="1280">                    </picture>
 
             </div>
 </div></div></div></div></div></div><div
