Fix perms, add contatti

--- a/contatti.html
+++ b/contatti.html
@@ -22,10 +22,7 @@
         </script>
                     <meta name="robots" content="noindex,nofollow">
                 <title>Contatti | SyN Silvia Nardoni</title>
-                                            <link href="https://assets.jwwb.nl/assets/brand/webador/icon/favicon.png?bust=2299e1307cbb69076146" rel="shortcut icon">                                                <link href="https://assets.jwwb.nl/assets/brand/webador/icon/favicon.png?bust=2299e1307cbb69076146" rel="icon">                                        <meta property="og:image" content="https&#x3A;&#x2F;&#x2F;primary.jwwb.nl&#x2F;pexels&#x2F;50&#x2F;5083396.jpeg&#x3F;enable-io&#x3D;true&amp;enable&#x3D;upscale&amp;fit&#x3D;bounds&amp;width&#x3D;1200">
-                    <meta property="og:image" content="https&#x3A;&#x2F;&#x2F;primary.jwwb.nl&#x2F;pexels&#x2F;53&#x2F;5361088.jpeg&#x3F;enable-io&#x3D;true&amp;enable&#x3D;upscale&amp;fit&#x3D;bounds&amp;width&#x3D;1200">
                                     <meta name="twitter:card" content="summary_large_image">
-                        <meta property="twitter:image" content="https&#x3A;&#x2F;&#x2F;primary.jwwb.nl&#x2F;pexels&#x2F;50&#x2F;5083396.jpeg&#x3F;enable-io&#x3D;true&amp;enable&#x3D;upscale&amp;fit&#x3D;bounds&amp;width&#x3D;1200">
                                                     <script src="https://www.google.com/recaptcha/enterprise.js?hl=it&amp;render=explicit" nonce="2a6a2b15b8f8d939c0d61e24e17910a4" data-turbo-track="reload"></script>
 <script src="https://plausible.io/js/script.manual.js" nonce="2a6a2b15b8f8d939c0d61e24e17910a4" data-turbo-track="reload" defer data-domain="shard1.jouwweb.nl"></script>
 <link rel="stylesheet" type="text/css" href="https://gfonts.jwwb.nl/css?display=fallback&amp;family=Lato%3A400%2C700%2C400italic%2C700italic%7CMerriweather%3A400%2C700%2C400italic%2C700italic" nonce="2a6a2b15b8f8d939c0d61e24e17910a4" data-turbo-track="dynamic">
@@ -323,7 +320,7 @@
             class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic"
             style="padding-top: 100%;"
         >
-                                            <img class="jw-element-image__image jw-intrinsic__item" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5;" alt="" src="../primary.jwwb.nl/pexels/50/5083396.jpeg@enable-io=true&amp;enable=upscale&amp;crop=1%253A1&amp;width=800" srcset="../primary.jwwb.nl/pexels/50/5083396.jpeg@enable-io=true&amp;crop=1%253A1&amp;width=96width=../primary.jwwb.nl/pexels/50/5083396.jpeg@enable-io=true&amp;crop=1%253A1&amp;width=147A1&amp;../primary.jwwb.nl/pexels/50/5083396.jpeg@enable-io=true&amp;crop=1%253A1&amp;width=226crop=1%../primary.jwwb.nl/pexels/50/5083396.jpeg@enable-io=true&amp;crop=1%253A1&amp;width=347rue&amp../primary.jwwb.nl/pexels/50/5083396.jpeg@enable-io=true&amp;crop=1%253A1&amp;width=532ble-io=../primary.jwwb.nl/pexels/50/5083396.jpeg@enable-io=true&amp;crop=1%253A1&amp;width=816jpeg?en../primary.jwwb.nl/pexels/50/5083396.jpeg@enable-io=true&amp;crop=1%253A1&amp;width=1252083396.j../primary.jwwb.nl/pexels/50/5083396.jpeg@enable-io=true&amp;crop=1%253A1&amp;width=1920els/50/5083396.jpeg?enable-io=true&amp;crop=1%3A1&amp;width=1920 1920w" sizes="auto, min(100vw, 34px), 100vw" loading="lazy" width="800" height="800">                    </picture>
+                                            <img class="jw-element-image__image jw-intrinsic__item" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5;" alt="" src="image/email.png" sizes="auto, min(100vw, 34px), 100vw" loading="lazy" width="800" height="800">                    </picture>
 
             </div>
 </div><div
